# leffler-enginge

./: .gitignore  pom.xml
C/: CMakeLists.txt
C/src/examples/cicle_vs_rect/: main.c
C/src/lib/: display.c  display.h  input.c  input.h  vector.c
leff-c/src/examples/cicle_vs_rect/: main.c
leff-c/src/lib/: display.c  display.h  input.c  log.h  vector.h
leff-cpp/: CMakeLists.txt
leff-cpp/src/examples/helloworld/: CMakeLists.txt  main.cpp
leff-cpp/src/lib/: Application.cpp  Application.h  CMakeLists.txt  Input.cpp  Input.h  LefflerApp.cpp  LefflerApp.h  log.h
leff-java/src/main/java/se/fredin/leffler/: Main.java
leff-java/src/main/resources/maps/: world_01.txt
src/main/java/se/fredin/leffler/: Main.java
src/main/java/se/fredin/leffler/examples/: AABBEx.java  CircleVSRectCollisionEx.java  TileMapGameEx.java
src/main/java/se/fredin/lefflerengine/: Controller.java  Entity.java  Game.java  GameEntity.java  Leffler.java  Main.java
src/main/java/se/fredin/lefflerengine/asset/: Animator.java  SpriteSheet.java
src/main/java/se/fredin/lefflerengine/constants/: Heading.java  Mode.java
src/main/java/se/fredin/lefflerengine/display/: Camera.java  GamePanel.java
src/main/java/se/fredin/lefflerengine/map/: LefflerMap.java  TileMap.java
src/main/java/se/fredin/lefflerengine/object/: GameObject.java  MoveableGameObject.java  MovingGameObject.java  Player.java
src/main/java/se/fredin/lefflerengine/screen/: GamePanel.java
src/main/java/se/fredin/lefflerengine/util/: LefflerUtils.java  Utils.java
src/main/resources/maps/: level_01.txt
(+34 files in other folders)
